# mobile-terminal-overlay

./: .gitignore  .mobile-terminal.yaml  CLAUDE.md  README.md  mobile-terminal.service  mobile-terminal.service.example  package-lock.json  package.json  pyproject.toml  restart.sh  spawn-team.sh
.claude/: ARCHITECTURE.md  CONTEXT.md  PLAN-dashboard-enhancement.md  llm-on-switching.md  opendev-plan.md  plugin-mcp-plan.md  team-spawn-plan.md  touch-summary.md
.claude/plans/: async-yawning-waterfall.md  delightful-kindling-newt.md  enumerated-humming-storm.md  queue-by-repo.md  session-restore-roadmap.md  unified-nav-dropdown.md
docs/: STARTUP_LAYOUT.md
mobile_terminal/: __init__.py  challenge.py  cli.py  config.py  discovery.py  helpers.py  models.py  pane_buffer.py  permission_daemon.py  permission_policy.py  runtime.py  scratch.py  server.py  team_templates.py  terminal_session.py  transport.py
mobile_terminal/drivers/: __init__.py  base.py  claude.py  codex.py  gemini.py  generic.py
mobile_terminal/routers/: __init__.py  backlog.py  challenge.py  context.py  env.py  files.py  git.py  logs.py  mcp.py  permissions.py  preview.py  process.py  push.py  queue.py  runner.py  scratch.py  snapshots.py  (+4 more)
scripts/: README.md  deploy.sh  sync-version.js
systemd/: mto.service  tmux-claude.service
tests/: test_challenge_cli.py  test_drivers.py  test_pane_buffer.py  test_permission_daemon.py  test_permission_policy.py  test_queue.py  test_queue_by_repo.py  test_routes.py  test_runtime.py  test_scratch.py  test_startup_layout.py  test_tool_output.py  test_transport.py
(+24 files in other folders)
