[project]
name = "mobile-terminal-overlay"
version = "0.1.0"
description = "Mobile-optimized terminal overlay for tmux sessions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "gbons"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "websockets>=11.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",  # Required for file uploads
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
mobile-terminal = "mobile_terminal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mobile_terminal"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
